fix line wrap issue?

--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -4,7 +4,7 @@
 /* from http://stackoverflow.com/a/23393920 */
 
 .highlight pre code * {
-  white-space: nowrap;    // this sets all children inside to nowrap
+  white-space: pre;    // this sets all children inside to nowrap
 }
 
 .highlight pre {
